RESOLVED FIXED 258143
[GStreamer][WebRTC] Caps negotiation error when switching encoder to VP9
https://bugs.webkit.org/show_bug.cgi?id=258143
Summary [GStreamer][WebRTC] Caps negotiation error when switching encoder to VP9
Philippe Normand
Reported 2023-06-15 10:03:29 PDT
The vpxenc expects specific video formats depending on the selected profile.
Attachments
Philippe Normand
Comment 1 2023-06-15 10:05:07 PDT
EWS
Comment 2 2023-06-16 05:32:06 PDT
Committed 265241@main (00db70eb90d9): <https://commits.webkit.org/265241@main> Reviewed commits have been landed. Closing PR #15009 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-06-16 05:33:18 PDT
Note You need to log in before you can comment on or make changes to this bug.