[GStreamer][WebRTC] Caps negotiation error when switching encoder to VP9 https://bugs.webkit.org/show_bug.cgi?id=258143

Reviewed by Xabier Rodriguez-Calvar.

Set the vpxenc input video format depending on the selected encoding profile.

* Source/WebCore/platform/gstreamer/VideoEncoderPrivateGStreamer.cpp:
(webkit_video_encoder_class_init):

Canonical link: https://commits.webkit.org/265241@main